--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -22,14 +22,22 @@ div {
     border-radius: 5px;
 }
 
+.home-container {
+    padding: 10px;
+    margin: 20px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: rgb(204, 233, 236);
+}
+
 /* Styles for the form section */
 form {
-    background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: auto;
+    height: 250px;
+    width: 50%;
 }
 
 form h2 {
@@ -54,7 +62,7 @@ form textarea {
 }
 
 form input[type="submit"] {
-    background-color: #007bff;
+    background-color: rgb(100, 122, 248);
     color: white;
     padding: 10px 20px;
     border: none;
@@ -64,5 +72,25 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #331cb8;
+}
+
+.cancel-button {
+    background-color: #e75147;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+    padding: 8px;
+    margin: 8px 0 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.cancel-button:hover {
+    background-color: #d32f2f;
 }
